--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         }
         .bt div p {
             margin-bottom: 2rem;
+            color: rgb(117, 117, 117);
         }
         .bt div .tombol {
             background: #01e675;
@@ -35,7 +36,7 @@
             border-radius: 5px;
         }
         nav div a span {
-            font-size: 19px;
+            font-size: 20px;
             font-weight: 500;
             margin-left: 7px;
         }
@@ -81,7 +82,7 @@
     <nav class="navbar navbar-dark" style="background-color: #128c7e;">
         <div class="container-md">
           <a class="navbar-brand" href="/link-1">
-            <img src="img/wa-logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="img/wa-logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">
             <span>WhatsApp Group Invite</span>
           </a>
         </div>
