--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-dark" style="background-color: #128c7e;">
+    <nav class="navbar navbar-dark sticky-top" style="background-color: #128c7e;">
         <div class="container-md">
           <a class="navbar-brand" href="/link-1">
             <img src="img/wa-logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">
