--- a/index.html
+++ b/index.html
@@ -116,7 +116,26 @@
       </div>
 
       <div class="ads-1 text-center">
-       
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7fe1ee328283e6bf94589e46a564b485',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplayformats.com/7fe1ee328283e6bf94589e46a564b485/invoke.js"></scr' + 'ipt>');
+        </script>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '7fe1ee328283e6bf94589e46a564b485',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplayformats.com/7fe1ee328283e6bf94589e46a564b485/invoke.js"></scr' + 'ipt>');
+        </script>
       </div>
 
       <div class="footer">
