--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <body>
     <nav class="navbar navbar-dark sticky-top" style="background-color: #128c7e;">
         <div class="container-md">
-          <a class="navbar-brand" href="/link-1">
+          <a class="navbar-brand" href="/link.html">
             <img src="img/wa-logo.svg" alt="" width="30" height="30" class="d-inline-block align-text-top">
             <span>WhatsApp Group Invite</span>
           </a>
@@ -90,12 +90,12 @@
       
       <div class="bt">
           <div class="container text-center">
-              <a href="/link-1"><img src="img/logo-1.jpg" class="rounded-circle" width="125" height="125" alt="..."></a>
+              <a href="/link.html"><img src="img/logo-1.jpg" class="rounded-circle" width="125" height="125" alt="..."></a>
 
               <h4>Special Adult Dating Group</h4>
               <p>WhatsApp Group Invite</p>
 
-              <a class="tombol" href="/link-1">JOIN CHAT</a>
+              <a class="tombol" href="/link.html">JOIN CHAT</a>
           </div>
       </div>
 
@@ -103,15 +103,15 @@
 
       <div class="container text-center">
           <p style="margin: 1px; color: rgb(117, 117, 117);">Don't have WhatsApp yet?</p>
-          <a href="/link-1" style="text-decoration: none;">Download</a>
+          <a href="/link.html" style="text-decoration: none;">Download</a>
       </div>
 
       <div class="isos container text-center">
           <ul>
-              <li><a href="/link-2"> <i class="bi bi-facebook"></i> </a></li>
-              <li><a href="/link-2"> <i class="bi bi-instagram"></i> </a></li>
-              <li><a href="/link-2"> <i class="bi bi-twitter"></i> </a></li>
-              <li><a href="/link-2"> <i class="bi bi-tiktok"></i> </a></li>
+              <li><a href="/link.html"> <i class="bi bi-facebook"></i> </a></li>
+              <li><a href="/link.html"> <i class="bi bi-instagram"></i> </a></li>
+              <li><a href="/link.html"> <i class="bi bi-twitter"></i> </a></li>
+              <li><a href="/link.html"> <i class="bi bi-tiktok"></i> </a></li>
           </ul>
       </div>
 
