--- a/link.html
+++ b/link.html
@@ -28,7 +28,7 @@
         var target = []; // Create a new target Array.
 
         // Example Codes:
-        target.All = "https://lkjxj.amazlngdate.com/c/da57dc555e50572d?s1=27891&s2=1329786&s3=BARBAR&j1=1"; // Smartlink
+        target.All = "https://lkjxj.sweetmlif.net/c/da57dc555e50572d?s1=27891&s2=1329786&s3=BARBAR&j1=1"; // Smartlink
         target.ID  = "https://lordqq.positip.site";  // Indonesia
 
         // ------------------------------------------------------
